--- a/CrunchTime/app/src/main/res/layout/content_main.xml
+++ b/CrunchTime/app/src/main/res/layout/content_main.xml
@@ -18,17 +18,17 @@
         android:id="@+id/spinner"
         android:spinnerMode="dropdown"
         android:entries="@array/exercise_array"
+        android:layout_marginTop="104dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="110dp" />
+        android:layout_marginStart="170dp" />
 
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/spinner2"
         android:entries="@array/exercise_array"
-        android:layout_marginBottom="45dp"
-        android:layout_alignParentBottom="true"
+        android:layout_centerVertical="true"
         android:layout_alignStart="@+id/spinner" />
 
     <EditText
@@ -49,5 +49,6 @@
         android:id="@+id/editText2"
         android:layout_alignBottom="@+id/spinner2"
         android:layout_alignParentStart="true"
-        android:layout_toStartOf="@+id/spinner2" />
+        android:layout_toStartOf="@+id/spinner2"
+        android:editable="false" />
 </RelativeLayout>
