--- a/CrunchTime/app/src/main/res/layout/content_main.xml
+++ b/CrunchTime/app/src/main/res/layout/content_main.xml
@@ -36,7 +36,8 @@
         android:ems="10"
         android:id="@+id/editText"
         android:layout_alignParentTop="true"
-        android:layout_toStartOf="@+id/textView" />
+        android:layout_toStartOf="@+id/textView"
+        android:text="1" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -46,7 +47,8 @@
         android:id="@+id/editText2"
         android:editable="false"
         android:layout_alignTop="@+id/textView3"
-        android:layout_toStartOf="@+id/textView" />
+        android:layout_toStartOf="@+id/textView"
+        android:text="1" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -61,18 +63,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
         android:id="@+id/textView2"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/editText" />
+        android:layout_toEndOf="@+id/editText"
+        android:text="reps" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
         android:id="@+id/textView3"
         android:layout_marginTop="31dp"
         android:layout_below="@+id/textView"
-        android:layout_toEndOf="@+id/editText2" />
+        android:layout_toEndOf="@+id/editText2"
+        android:text="reps of" />
 </RelativeLayout>
